# product-search-API

./: .env.example  README.md  pyproject.toml
products/: admin.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
products/migrations/: 0001_initial.py  0002_product_created_at.py  0003_product_added_sugars_product_allergens_and_more.py
project/: settings.py  urls.py
